# grass

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build-pgo.sh  run-sass-specs.py
.claude/: settings.local.json
.github/workflows/: release_napi.yml  tests.yml
crates/compiler/: Cargo.toml
crates/compiler/src/: common.rs  context_flags.rs  error.rs  fs.rs  interner.rs  lexer.rs  lib.rs  logger.rs  options.rs  serializer.rs
crates/include_sass/: Cargo.toml
crates/include_sass/src/: lib.rs
crates/lib/: Cargo.toml
crates/lib/pkg-publish/: index.js  package.json
crates/lib/src/: lib.rs  main.rs
crates/lib/tests/: addition.rs  at-root.rs  color.rs  color_hsl.rs  color_hwb.rs  comments.rs  compressed.rs  css_if.rs  custom-property.rs  division.rs  error.rs  extend.rs  for.rs  forward.rs  get-function.rs  imports.rs  inspect.rs  interpolation.rs  is-superselector.rs  keyframes.rs  list.rs  macros.rs  math-module.rs  math.rs  media.rs  meta-module.rs  min-max.rs  misc.rs  mixins.rs  modulo.rs  multiplication.rs  nan.rs  number.rs  parallel.rs  plain-css.rs  sass.rs  scope.rs  selector-append.rs  selector-nest.rs  selector-unify.rs  (+8 more)
crates/napi/: Cargo.toml  bench-parallel.js  index.d.ts  index.js  package-lock.json  package.json  test-parallel.js  test-sequential.js
crates/napi/src/: lib.rs
fuzz/: Cargo.toml
prototype/: bench-breakdown.js  bench-napi.js  bench-sass.js  bench-wasm-string.js  bench-wasm.js  bench.js  bench.sh  compile.js  package-lock.json  package.json  parallel-validation.py  perf-check.sh  run-color-specs.py  run-sass-specs.py  watch.js
(+66 files in other folders)
