[workspace]
resolver = "2"
members = [
    "crates/compiler",
    "crates/include_sass",
    "crates/lib",
    "crates/napi",
]

[profile.release]
debug = 1
panic = "abort"
lto = true
codegen-units = 1

[profile.small]
inherits = 'release'
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

# WASM-optimized: max speed, no debug info
[profile.wasm]
inherits = 'release'
opt-level = 3
debug = false
strip = true

